Update demo index

--- a/index.ipynb
+++ b/index.ipynb
@@ -18,6 +18,8 @@
     "\n",
     "[Atomic solid](Demos/AtomicSolid.ipynb): ball-and-spring model of a solid\n",
     "\n",
+    "[Billboarding text](Demos/BillboardingText.ipynb): 3D text, with \"billboarding\" \n",
+    "\n",
     "[Binary star](Demos/BinaryStar.ipynb): two stars orbit each other\n",
     "\n",
     "[Bounce](Demos/Bounce.ipynb): a ball bounces in a 3D box\n",
@@ -35,6 +37,8 @@
     "[Dipole electric field](Demos/DipoleElectricField.ipynb): the electric field of a dipole (+ and - charges)\n",
     "\n",
     "[Double pendulum](Demos/DoublePendulum.ipynb): a double pendulum shows chaotic motion\n",
+    "\n",
+    "[Extrusions](Demos/Extrusions.ipynb): extrude a 2D shape along a 3D path\n",
     "\n",
     "[Live graphs](Demos/Graphs.ipynb): incremental graphing; mouse over the graph with crosshairs\n",
     "\n",
@@ -77,21 +81,12 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
