Fix problem with axis and up; add no-notebook demo suite

--- a/Demos/Gyroscope-Suspended.ipynb
+++ b/Demos/Gyroscope-Suspended.ipynb
@@ -202,10 +202,6 @@
     "def Tbutton(b):\n",
     "    global visTorque\n",
     "    visTorque = not visTorque\n",
-    "    if visTorque:\n",
-    "        b.text = \"Hide torque about CM (cyan)\"\n",
-    "    else:\n",
-    "        b.text = \"Show torque about CM (cyan)\"\n",
     "\n",
     "checkbox( bind=Tbutton)\n",
     "scene.append_to_caption(\" Show torque about CM (cyan)\")\n",
@@ -219,7 +215,7 @@
     "\n",
     "def handlemenu(m): # come here when a change is made in the menu choice\n",
     "    global pureprecession\n",
-    "    val = m.selected\n",
+    "    val = m.index\n",
     "    pureprecession = (val == 0)\n",
     "    reset()\n",
     "\n",
@@ -322,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
