Fix a problem with canvas/lights; first release of povexport for VPython 7

--- a/Demos/Stonehenge.ipynb
+++ b/Demos/Stonehenge.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -106,7 +104,6 @@
    ],
    "source": [
     "from vpython import *\n",
-    "import time\n",
     "\n",
     "# Bruce Sherwood\n",
     "\n",
@@ -289,7 +286,8 @@
     "ball = []\n",
     "ball.append(sphere(pos=vector(0,0,0), size=2*rball*vector(1,1,1), color=color.blue))\n",
     "for nn in range(4):\n",
-    "    cc = cone(pos=vector(0,0,0)+vector(0.8*rball,0,0), axis=vector(3*rball,0,0), size=rball*vector(3,1,1), color=color.yellow)\n",
+    "    cc = cone(pos=vector(0,0,0)+vector(0.8*rball,0,0), axis=vector(3*rball,0,0),\n",
+    "              size=rball*vector(3,1,1), color=color.yellow)\n",
     "    cc.rotate(angle=0.5*nn*pi, axis=vector(0,1,0), origin=vector(0,0,0))\n",
     "    ball.append(cc)\n",
     "ball = compound(ball)\n",
@@ -417,7 +415,7 @@
     "    spring.axis = mass.pos + vector(0, hmass / 2, 0) - spring.pos\n",
     "\n",
     "    # Update the analog clock on the back slab\n",
-    "    clock.update()\n"
+    "    clock.update()"
    ]
   },
   {
@@ -456,9 +454,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
