--- a/Demos/Textures2.ipynb
+++ b/Demos/Textures2.ipynb
@@ -3,26 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +32,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +44,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -71,6 +57,18 @@
      "data": {
       "application/javascript": [
        "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -106,10 +104,6 @@
    ],
    "source": [
     "from vpython import *\n",
-    "\n",
-    "# This version uses a VPython menu\n",
-    "# See Textures1 for a version that uses a Jupyter notebook menu\n",
-    "\n",
     "scene.width = 600\n",
     "scene.height = 600\n",
     "show = 'box'\n",
@@ -122,11 +116,9 @@
     "Ts = [textures.flower, textures.granite, textures.gravel, textures.metal, textures.rock, textures.rough,\n",
     "      textures.rug, textures.stones, textures.stucco, textures.wood, textures.wood_old, textures.earth]\n",
     "bumps = [ None, None, 'gravel', None, 'rock', None, None, 'stones', 'stucco', None, 'wood_old']\n",
-    "labels = []\n",
     "\n",
     "def erase():\n",
-    "    objects = scene.objects\n",
-    "    for obj in objects:\n",
+    "    for obj in scene.objects:\n",
     "        obj.visible = False\n",
     "\n",
     "def show_object(index, x, y):\n",
@@ -147,10 +139,10 @@
     "        c = pyramid(pos=vec(x-D/2,y,0), size=D*vec(1,1,1))\n",
     "    c.index = index\n",
     "    c.shininess = 0\n",
-    "    c.texture = dict(file=T, bumpmap=B)\n",
-    "    labels.append(label(pos=vec(x,y-.5,0), box=0, text='textures.'+names[index]))\n",
+    "    c.texture = {'file':T, 'bumpmap':B}\n",
+    "    label(pos=vec(x,y-.5,0), box=0, text='textures.'+names[index])\n",
     "\n",
-    "def start_setup():\n",
+    "def setup():\n",
     "    scene.range = 2.2\n",
     "    scene.fov = 0.2\n",
     "    scene.center = vec(1.5,2,0)\n",
@@ -165,20 +157,14 @@
     "            show_object(index, x, y)\n",
     "            index += 1\n",
     "        y -= 1.3\n",
-    "\n",
-    "def end_setup():\n",
     "    scene.visible = True\n",
     "\n",
-    "def setup():\n",
-    "    start_setup()\n",
-    "    end_setup()\n",
-    "\n",
-    "start_setup()\n",
+    "setup()\n",
+    "scene.visible = False\n",
     "scene.caption = \"Loading textures...\"\n",
     "scene.waitfor(\"textures\")\n",
-    "scene.caption = \"\"\n",
-    "\n",
     "scene.caption = \"Choose the type of object:  \"\n",
+    "scene.visible = True\n",
     "\n",
     "def choose(c):\n",
     "    global show\n",
@@ -187,7 +173,6 @@
     "menu(choices=['box', 'sphere', 'cylinder', 'cone', 'pyramid'], selected='box', bind=choose)\n",
     "\n",
     "scene.append_to_caption('\\n\\nClick an object to enlarge it; then click anywhere to show all objects again.')\n",
-    "end_setup()\n",
     "\n",
     "hit = None\n",
     "clicked = False\n",
@@ -239,7 +224,7 @@
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
-   "name": "vpythonkernel"
+   "name": "vpython"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,9 +236,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
