Implement wtext object (and clean up scene.title_anchor and scene.caption_anchor)

--- a/Demos/ButtonsSlidersMenus2.ipynb
+++ b/Demos/ButtonsSlidersMenus2.ipynb
@@ -3,14 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -22,7 +20,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1a.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -34,7 +32,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1b.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +44,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glowcomm\");"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +56,19 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
+       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -145,12 +155,15 @@
     "def setspeed(s):\n",
     "    global speed\n",
     "    speed = s.value\n",
+    "    wt.text = '{}'.format(s.value)\n",
     "    \n",
-    "slider(min=20, max=500, value=250, length=350, bind=setspeed)\n",
+    "sl = slider(min=20, max=500, value=250, length=280, bind=setspeed, right=15)\n",
+    "\n",
+    "wt = wtext(text=sl.value)\n",
     "\n",
     "scene.append_to_caption('\\n')\n",
     "\n",
-    "r1 = radio(bind=Color, checked=True, text='Cyan ')\n",
+    "r1 = radio(bind=Color, checked=True, text='Cyan')\n",
     "\n",
     "scene.append_to_caption('       ')\n",
     "\n",
@@ -177,7 +190,7 @@
     "\n",
     "scene.append_to_caption('\\n')\n",
     "\n",
-    "r2 = radio(bind=Color, text='Red ')\n",
+    "r2 = radio(bind=Color, text='Red')\n",
     "\n",
     "scene.append_to_caption('         ')\n",
     "\n",
@@ -187,13 +200,23 @@
     "    else:\n",
     "        currentobject.opacity = 1\n",
     "\n",
-    "trans = checkbox(bind=transparency, text='Transparent')\n",
+    "checkbox(bind=transparency, text='Transparent')\n",
     "\n",
     "while True:\n",
     "    rate(100)\n",
     "    if running:\n",
-    "        currentobject.rotate(angle=speed*1e-4, axis=vector(0,1,0))\n"
+    "        currentobject.rotate(angle=speed*1e-4, axis=vector(0,1,0))\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -201,7 +224,7 @@
   "kernelspec": {
    "display_name": "VPython",
    "language": "python",
-   "name": "vpythonkernel"
+   "name": "vpython"
   },
   "language_info": {
    "codemirror_mode": {
@@ -213,9 +236,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
