--- a/Demos/Color-RGB-HSV2.ipynb
+++ b/Demos/Color-RGB-HSV2.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -106,48 +104,109 @@
    ],
    "source": [
     "from vpython import *\n",
-    "# This version uses VPython slider\n",
-    "# See ButtonsSlidersMenus1 for a version that uses Jupyter slider\n",
+    "# This version uses VPython widgets: button, radio button, checkbox, slider, menu\n",
+    "# See ButtonsSlidersMenus1 for a version that uses Jupyter notebook widgets: button, slider, menu\n",
+    "scene.width = 350\n",
+    "scene.height = 300\n",
+    "scene.range = 1.3\n",
+    "scene.title = \"Widgets (buttons, etc.)\\n\"\n",
     "\n",
-    "scene.userzoom = False\n",
-    "scene.userspin = False\n",
-    "scene.width = 400\n",
-    "scene.height = 200\n",
-    "scene.range = 1\n",
-    "scene.background = color.red\n",
-    "box(pos=vector(10,0,0)) # Force creation of canvas; box is not seen because it is outside the canvas\n",
-    "cancopy = 'You can Ctrl-C or Command-C copy these RGB and HSV values:\\n'\n",
-    "scene.title = cancopy\n",
-    "scene.append_to_title(\"RGB = <1.000, 0.000, 0.000>, HSV = <0.000, 0.000, 0.000>\")\n",
+    "running = True\n",
     "\n",
-    "C = ['Red', 'Green', 'Blue', 'Hue', 'Saturation', 'Value']\n",
-    "sliders = []\n",
+    "def Run(b):\n",
+    "    global running\n",
+    "    running = not running\n",
+    "    if running: b.text = \"Pause\"\n",
+    "    else: b.text = \"Run\"\n",
+    "    \n",
+    "button(text=\"Pause\", pos=scene.title_anchor, bind=Run)\n",
     "\n",
-    "def set_background(sl):\n",
-    "    if sl.id < 3:\n",
-    "        rgb = vector(sliders[0].value, sliders[1].value, sliders[2].value)\n",
-    "        hsv = color.rgb_to_hsv(rgb)\n",
-    "        sliders[3].value = int(1000*hsv.x)/1000# reset HSV slider positions; display 3 figures\n",
-    "        sliders[4].value = int(1000*hsv.y)/1000\n",
-    "        sliders[5].value = int(1000*hsv.z)/1000\n",
+    "box_object = box(visible=True)\n",
+    "cone_object = cone(visible=False, radius=0.5)\n",
+    "pyramid_object = pyramid(visible=False)\n",
+    "cylinder_object = cylinder(visible=False, radius=0.5)\n",
+    "sphere(radius=0.3)\n",
+    "\n",
+    "col = color.cyan\n",
+    "currentobject = box_object\n",
+    "currentobject.color = col\n",
+    "\n",
+    "def Color(c):\n",
+    "    global col\n",
+    "    if col.equals(color.cyan): # change to red\n",
+    "        currentobject.color = col = color.red\n",
+    "        cbutton.text = \"<b>Cyan</b>\"\n",
+    "        cbutton.textcolor = color.cyan\n",
+    "        cbutton.background = color.red\n",
+    "        r1.checked = False\n",
+    "        r2.checked = True\n",
+    "    else:                      # change to cyan\n",
+    "        currentobject.color = col = color.cyan\n",
+    "        cbutton.text = \"<b>Red</b>\"\n",
+    "        cbutton.textcolor = color.red\n",
+    "        cbutton.background = color.cyan\n",
+    "        r1.checked = True\n",
+    "        r2.checked = False\n",
+    "        \n",
+    "cbutton = button(text='<b>Red</b>', textcolor=color.red, background=color.cyan, pos=scene.title_anchor, bind=Color)\n",
+    "\n",
+    "scene.caption = \"Vary the rotation speed:\\n\"\n",
+    "speed = 150\n",
+    "def setspeed(s):\n",
+    "    global speed\n",
+    "    speed = s.value\n",
+    "    wt.text = '{:1.0f}'.format(s.value)\n",
+    "    \n",
+    "sl = slider(min=20, max=500, value=250, length=280, bind=setspeed, right=15)\n",
+    "\n",
+    "wt = wtext(text='{:1.0f}'.format(sl.value))\n",
+    "\n",
+    "scene.append_to_caption('\\n')\n",
+    "\n",
+    "r1 = radio(bind=Color, checked=True, text='Cyan')\n",
+    "\n",
+    "scene.append_to_caption('       ')\n",
+    "\n",
+    "def M(m):\n",
+    "    global col, currentobject\n",
+    "    op = currentobject.opacity\n",
+    "    currentaxis = currentobject.axis\n",
+    "    currentobject.visible = False\n",
+    "    val = m.selected\n",
+    "    if val == \"box\": \n",
+    "        currentobject = box_object\n",
+    "    elif val == \"cone\": \n",
+    "        currentobject = cone_object\n",
+    "    elif val == \"pyramid\": \n",
+    "        currentobject = pyramid_object\n",
+    "    elif val == \"cylinder\": \n",
+    "        currentobject = cylinder_object\n",
+    "    currentobject.color = col\n",
+    "    currentobject.axis = currentaxis\n",
+    "    currentobject.visible = True\n",
+    "    currentobject.opacity = op\n",
+    "\n",
+    "menu(choices=['Choose an object', 'box', 'cone', 'pyramid', 'cylinder'], index=0, bind=M)\n",
+    "\n",
+    "scene.append_to_caption('\\n')\n",
+    "\n",
+    "r2 = radio(bind=Color, text='Red')\n",
+    "\n",
+    "scene.append_to_caption('         ')\n",
+    "\n",
+    "def transparency(b):\n",
+    "    if b.checked:\n",
+    "        currentobject.opacity = 0.5\n",
     "    else:\n",
-    "        hsv = vector(sliders[3].value, sliders[4].value, sliders[5].value)\n",
-    "        rgb = color.hsv_to_rgb(hsv)\n",
-    "        sliders[0].value = int(1000*rgb.x)/1000 # reset RGB slider positions; display 3 figures\n",
-    "        sliders[1].value = int(1000*rgb.y)/1000\n",
-    "        sliders[2].value = int(1000*rgb.z)/1000\n",
-    "    scene.background = rgb\n",
-    "    # For readability, limit precision of display of quantities to 3 figures\n",
-    "    f = \"RGB = <{:1.3f}, {:1.3f}, {:1.3f}>, HSV = <{:1.3f}, {:1.3f}, {:1.3f}>\"\n",
-    "    scene.title = cancopy + f.format(rgb.x, rgb.y, rgb.z, hsv.x, hsv.y, hsv.z)\n",
+    "        currentobject.opacity = 1\n",
     "\n",
-    "scene.caption = '\\n'\n",
-    "for i in range(6): # Create the 3 RGB and 3 HSV sliders\n",
-    "    sliders.append(slider(length=300, left=10, min=0, max=1, bind=set_background, id=i))\n",
-    "    scene.append_to_caption('    '+C[i]+'\\n\\n') # Display slider name\n",
-    "    if i == 2: scene.append_to_caption(\"\\n\\n\") # Separate the RGB and HSV sliders\n",
-    "sliders[0].value = 1 # make the background red\n",
-    "sliders[4].value = sliders[5].value = 1\n"
+    "checkbox(bind=transparency, text='Transparent')\n",
+    "\n",
+    "while True:\n",
+    "    rate(100)\n",
+    "    if running:\n",
+    "        currentobject.rotate(angle=speed*1e-4, axis=vector(0,1,0))\n",
+    "\n"
    ]
   },
   {
@@ -177,9 +236,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
