--- a/Demos/Lorenz.ipynb
+++ b/Demos/Lorenz.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -82,7 +80,7 @@
    ],
    "source": [
     "from vpython import *\n",
-    "from numpy import arange, clip\n",
+    "from numpy import clip\n",
     "\n",
     "# David Scherer\n",
     "\n",
@@ -147,9 +145,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
