--- a/Demos/Rug.ipynb
+++ b/Demos/Rug.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -61,7 +59,7 @@
     "    for x in range(w): # from 0 to w, not including w\n",
     "        quad(v0=verts[y][x], v1=verts[y][x+1], v2=verts[y+1][x+1], v3=verts[y+1][x], texture=textures.rug)\n",
     "\n",
-    "#scene.waitfor('textures') # wait until the rug texture has been loaded\n",
+    "scene.waitfor('textures') # wait until the rug texture has been loaded\n",
     "\n",
     "Lpulse = 0.4 # length of half sine wave\n",
     "dy_pulse = Lpulse/50\n",
@@ -148,9 +146,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
