--- a/Demos/Graphs.ipynb
+++ b/Demos/Graphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
     "from vpython import *\n",
     "\n",
     "s = '    Test of <b><i>graphing</i></b>. Move the mouse over the graph to display data.'\n",
-    "oscillation = graph(title=s, xtitle='time', ytitle='value')\n",
+    "oscillation = graph(title=s, xtitle='time', ytitle='value', fast=False)\n",
     "funct1 = gcurve(color=color.blue, width=4)\n",
     "funct2 = gvbars(delta=0.4, color=color.red)\n",
     "funct3 = gdots(color=color.orange, size=3)\n",
@@ -115,23 +115,13 @@
     "    rate(100)\n",
     "    funct1.plot( t, 5.0+5.0*cos(-0.2*t)*exp(0.015*t) )\n",
     "    funct2.plot( t, 2.0+5.0*cos(-0.1*t)*exp(0.015*t) )\n",
-    "    funct3.plot( t, 5.0*cos(-0.03*t)*exp(0.015*t) )\n",
-    "\n",
-    "box()\n",
-    "scene.pause()\n",
-    "funct2.delete()\n",
-    "scene.pause()\n",
-    "oscillation.delete()\n",
-    "scene.pause()\n",
-    "scene.delete()\n"
+    "    funct3.plot( t, 5.0*cos(-0.03*t)*exp(0.015*t) )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "funct2.delete()"
@@ -139,21 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "scene.delete()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "oscillation.delete()"
@@ -186,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
