--- a/Demos/HardSphereGas.ipynb
+++ b/Demos/HardSphereGas.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -206,8 +205,9 @@
     "for i in range(nhisto): histo.append(0.0)\n",
     "histo[barx(pavg/mass)] = Natoms\n",
     "\n",
-    "graph( width=500, height=300, xmax=3000, ymax=Natoms*deltav/1000, align='right' )\n",
-    "theory = gcurve( color=color.cyan )\n",
+    "graph( width=500, height=300, xmax=3000, ymax=Natoms*deltav/1000, align='right', fast=False,\n",
+    "     xtitle='speed, m/s', ytitle='# of atoms', title='Speed Distribution')\n",
+    "theory = gcurve( color=color.cyan, label='Theory' )\n",
     "dv = 10\n",
     "for v in range(0,3001+dv,dv):  # theoretical prediction\n",
     "    theory.plot( v, (deltav/dv)*Natoms*4*pi*((mass/(2*pi*k*T))**1.5) *exp(-0.5*mass*(v**2)/(k*T))*(v**2)*dv )\n",
@@ -334,9 +334,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
