--- a/index.ipynb
+++ b/index.ipynb
@@ -58,6 +58,10 @@
     "\n",
     "[Rotating boxes](Demos/RotatingBoxes.ipynb): 1000 rotating boxes\n",
     "\n",
+    "[Rotating curve](Demos/RotatingCurve.ipynb): 15000-point rotating curve object\n",
+    "\n",
+    "[Rotating points](Demos/RotatingPoints.ipynb): 15000-point rotating points object\n",
+    "\n",
     "[Rug](Demos/Rug.ipynb): a wave moves along a Navajo rug\n",
     "\n",
     "[Stars](Demos/Stars.ipynb): 20 stars interacting with each other gravitationally\n",
@@ -100,9 +104,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
