Remove use of Plotly from Jupyter notebook demos because it often fails

--- a/Demos/Graphs.ipynb
+++ b/Demos/Graphs.ipynb
@@ -106,7 +106,7 @@
     "from vpython import *\n",
     "\n",
     "s = '    Test of <b><i>graphing</i></b>. Move the mouse over the graph to display data.'\n",
-    "oscillation = graph(title=s, xtitle='time', ytitle='value', fast=False)\n",
+    "oscillation = graph(title=s, xtitle='time', ytitle='value', fast=True)\n",
     "funct1 = gcurve(color=color.blue, width=4)\n",
     "funct2 = gvbars(delta=0.4, color=color.red)\n",
     "funct3 = gdots(color=color.orange, size=3)\n",
