--- a/Demos/DipoleElectricField.ipynb
+++ b/Demos/DipoleElectricField.ipynb
@@ -3,14 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/data/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -22,7 +20,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/data/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -34,7 +32,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/data/glowcomm\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +44,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/data/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +56,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/data/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -70,7 +68,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/data/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -172,9 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -189,16 +185,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
