--- a/Demos/Color-RGB-HSV2.ipynb
+++ b/Demos/Color-RGB-HSV2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -20,7 +20,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -32,7 +32,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glowcomm\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glow.min\"], function(){console.log(\"GLOW LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -168,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -185,14 +183,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
