--- a/Demos/Graphs.ipynb
+++ b/Demos/Graphs.ipynb
@@ -106,7 +106,7 @@
     "from vpython import *\n",
     "\n",
     "s = '    Test of <b><i>graphing</i></b>. Move the mouse over the graph to display data.'\n",
-    "oscillation = graph(title=s, xtitle='time', ytitle='value', fast=True)\n",
+    "oscillation = graph(title=s, xtitle='time', ytitle='value', fast=False)\n",
     "funct1 = gcurve(color=color.blue, width=4)\n",
     "funct2 = gvbars(delta=0.4, color=color.red)\n",
     "funct3 = gdots(color=color.orange, size=3)\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -156,14 +154,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
